Add java options